[package]
name = "gen-image-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.83"
base64 = "0.22.1"
dotenv = "0.15.0"
reqwest = {version = "0.12.9", features = ["json", "rustls-tls", "http2", "charset"], default-features = false}
serde = {version = "1.0.214", features = ["derive"]}
